--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
     "jest": "^20.0.4",
+    "nodemon": "^1.11.0",
     "react-hot-loader": "next",
     "react-test-renderer": "^15.6.1",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0"    
   }
 }
