--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "browser.js",
   "scripts": {
-    "start": "node ./src/node.js",
+    "start": "node ./node.js",
+    "start:prod": "NODE_ENV=production node ./dist/index.server.js",
+    "build:prod": "npm run build:server && npm run build:client",
+    "build:server": "NODE_ENV=production babel src -s -D -d dist --ignore spec.js,test.js",
+    "build:client": "NODE_ENV=production webpack -p && npm run build:index-html",
+    "build:index-html": "node npm_scripts/generateIndexHTML.js",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -18,6 +24,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.0",
@@ -33,6 +40,6 @@
     "nodemon": "^1.11.0",
     "react-hot-loader": "next",
     "react-test-renderer": "^15.6.1",
-    "webpack-dev-server": "^2.5.0"    
+    "webpack-dev-server": "^2.5.0"
   }
 }
