--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 { 
-  "presets": [ "es2015", "react" ] 
+  "presets": [ "es2015", "react" ],
+  "env": {
+    "node": {
+      "plugins": [
+        [
+          "babel-plugin-transform-require-ignore", { "extensions": [".styl"] }
+        ]
+      ]
+    }
+  }
 }
