--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "browser.js",
   "scripts": {
-    "start": "node ./node.js",
+    "start": "BABEL_ENV=node node ./node.js",
     "start:prod": "NODE_ENV=production node ./dist/index.server.js",
-    "build:prod": "npm run build:server && npm run build:client",
-    "build:server": "NODE_ENV=production babel src -s -D -d dist --ignore spec.js,test.js",
+    "build:prod": "npm run clean && npm run build:server && npm run build:client",
+    "build:server": "BABEL_ENV=node NODE_ENV=production babel src -s -D -d dist --ignore spec.js,test.js",
     "build:client": "NODE_ENV=production webpack -p && npm run build:index-html",
     "build:index-html": "node npm_scripts/generateIndexHTML.js",
+    "clean": "rm -rf dist public",
     "test": "jest"
   },
   "author": "",
@@ -28,18 +29,25 @@
     "babel-core": "^6.25.0",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.0",
+    "babel-plugin-transform-require-ignore": "^0.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "css-hot-loader": "^1.2.0",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "jest": "^20.0.4",
     "nodemon": "^1.11.0",
     "react-hot-loader": "next",
     "react-test-renderer": "^15.6.1",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "webpack-dev-server": "^2.5.0"
   }
 }
