--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.6",
+    "es6-promise": "^4.1.1",
     "express": "^4.15.3",
+    "got": "^7.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "webpack": "^2.2.0",
